--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0",
   "description": "gulp-fn - gulp plugin used in order to run a custom function",
   "main": "gulp-fn.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ThierrySpetebroot/gulp-fn.git"
+  },
   "directories": {
     "test": "tests"
   },
@@ -17,5 +21,8 @@
     "javascript"
   ],
   "author": "Thierry Spetebroot",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "gulp": "^3.6.2"
+  }
 }
