added a few more keywords

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "keywords": [
     "gulp",
+    "gulp-fn",
+    "gulp-plugin",
+    "gulpplugin",
     "plugin",
     "function",
     "js",
