--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-fn",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "gulp-fn - gulp plugin used in order to run custom callback functions per file",
   "main": "gulp-fn.js",
   "repository": {
@@ -21,7 +21,9 @@
     "function",
     "callback",
     "js",
-    "javascript"
+    "javascript",
+    "ts",
+    "typescript"
   ],
   "author": "Thierry Spetebroot",
   "license": "ISC",
