updated license in package.json License was not matching `LICENCE` (MIT) in repository

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typescript"
   ],
   "author": "Thierry Spetebroot",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "plugin-error": "^1.0.1",
     "through2": "^2.0.3"
